# twars-url2md

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  DEVELOPMENT.md  GEMINI.md  NOTES.md  PLAN.md  README.md  TESTS.md  TODO.md  WORK.md  build.rs  build.sh  install.sh  llms.txt  release-notes-v1.4.5.md  test_http.rs
.cursor/rules/: concurrency-model.mdc  content-conversion-flow.mdc  data-flow-paths.mdc  url-processing-algorithm.mdc
.giga/: specifications.json
.github/workflows/: ci.yml  docs.yml  release.yml
example.com/: index.md
example.org/: index.md
github.com/actions-rs/: cargo.md
github.com/dtolnay/: rust-toolchain.md
github.com/marketplace/actions/: rust-cargo.md  rust-release-binary.md  rustup-toolchain-install.md
github.com/rust-build/: rust-build.md
issues/: 501.md  502.md  issue101.txt  issue102.txt  issue103.txt  issue104.txt  issuetest.py
issues/resolved/: RESOLVED_ISSUES_SUMMARY.md
scripts/: build.sh  generate-llms.sh  lint.sh  release.sh  test.sh
src/: cli.rs  error.rs  html.rs  lib.rs  main.rs  markdown.rs  tests.rs  url.rs
src_docs/: mkdocs.yml
src_docs/md/: advanced.md  api.md  architecture.md  configuration.md  contributing.md  index.md  installation.md  quickstart.md  testing.md  usage.md
src_docs/md/assets/: extra.css
test_output/example.com/: index.md
testdata/: example.sh  sample.html  sample_urls.txt
tests/: benchmarks.rs  scripts_build_help_test.sh  tests.rs
tests/common/: mod.rs
tests/fixtures/expected/: simple_output.md
tests/fixtures/html/: complex.html  simple.html
tests/fixtures/urls/: mixed_content.txt  test_urls.txt
tests/integration/: e2e_tests.rs  mod.rs
tests/unit/: mod.rs  url_tests.rs
work/docs.rs/vergen-git2/latest/: index.md
work/docs.rs/vergen-gitcl/latest/: index.md
work/docs.rs/vergen-gix/latest/: index.md
work/docs.rs/vergen-pretty/latest/: index.md
work/docs.rs/vergen/latest/: index.md
